<resources>

    <string name="app_name">BC Info</string>
    <string name="menu_main_refresh">Vernieuwen</string>
    <string name="menu_main_about">Over</string>
    <string name="menu_main_settings">Instellingen</string>
    <string name="hello_world">Deze functie werkt nog niet. Gebruik &quot;Uitval website&quot;.</string>
    <string name="level_0">Alle meldingen</string>
    <string name="level_1">Havo 2</string>
    <string name="level_2">Havo 3</string>
    <string name="level_3">Havo Bovenbouw</string>
    <string name="level_4">Atheneum 2</string>
    <string name="level_5">Atheneum 3</string>
    <string name="level_6">Atheneum Bovenbouw</string>
    <string name="level_7">Gymnasium 2</string>
    <string name="level_8">Gymnasium 3</string>
    <string name="level_9">Gymnasium Bovenbouw</string>
    <string name="title_uitval">Uitval</string>
    <string name="about_title">Over BC Info</string>
    <string name="about_text">BC Info. Gemaakt door Wouter, Kevin, Rick, Justin en Tom.</string>
    <string name="settings_notificationstate">Notificaties</string>
    <string name="settings_notificationstate_summary">Schakel notificaties in</string>
    <string name="settings_notifications">Notificaties</string>
    <string name="sliderlayout_main_title">BC Info</string>
    <string name="sliderlayout_main_uitval">Uitval</string>
    <string name="firstruntext">Swipe van links naar rechts voor de filter.</string>
    <string name="about_licencetitle">Licenties</string>
    <string name="about_licence_slidingmenutitle">SlidingMenu</string>
    <string name="about_licence_slidingmenu">Copyright 2012 Jeremy Feinstein\n
\n
Licensed under the Apache License, Version 2.0 (the "License");\n
you may not use this file except in compliance with the License.\n
You may obtain a copy of the License at\n
\n
http://www.apache.org/licenses/LICENSE-2.0\n
\n
Unless required by applicable law or agreed to in writing, software\n
distributed under the License is distributed on an "AS IS" BASIS,\n
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n
See the License for the specific language governing permissions and\n
limitations under the License.</string>

</resources>